--- a/LabelPrinter/packages.config
+++ b/LabelPrinter/packages.config
@@ -6,6 +6,9 @@
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NLog" version="4.7.6" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.6" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.6" targetFramework="net472" />
   <package id="ReoGrid.Mvvm" version="1.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="SpreadsheetLight" version="3.4.11" targetFramework="net472" />
