--- a/MigrationBackup/efeeb4ae/LabelPrinter/packages.config
+++ b/MigrationBackup/efeeb4ae/LabelPrinter/packages.config
@@ -3,6 +3,8 @@
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net472" />
   <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net472" />
+  <package id="Microsoft.Windows.SDK.Contracts" version="10.0.18362.2005" targetFramework="net472" />
+  <package id="ModernWpfUI" version="0.9.4" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
@@ -16,6 +18,9 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="unvell.ReoGridWPF.dll" version="2.2.0" targetFramework="net472" />
   <package id="WPFThemes.DarkBlend" version="1.0.8" targetFramework="net472" />
 </packages>
